<resources>
    <string name="app_name">InfoApp</string>
    <string name="email_id">correo electronico</string>
    <string name="password">contraseña</string>
    <string name="login">Ingresar</string>
    <string name="failed">Autenticacion fallida</string>
    <string name="image">image</string>
    <string name="create_a_new_account">Crear una nueva cuenta!</string>
    <string name="isc">Ingeniería en Sistemas Computacionales</string>
    <string name="ige">Ingeniería en Gestión Empresarial</string>
    <string name="ii">Ingeniería Industrial</string>
    <string name="obj">OBJETIVO DEL PROGRAMA</string>
    <string name="cargando">Cargando..</string>
    <string name="camp">CAMPO DE ACCIÓN</string>
    <string name="perfIngre">PERFIL DEL INGRESO</string>
    <string name="perfEgre">PERFIL DE EGRESADO</string>
    <string name="plan">Plan de Estudios</string>
    <string name="ventajas">Ventajas del Plan de Estudios</string>
    <string name="quienes">QUIÉNES SOMOS</string>
    <string name="general">Objetivo General</string>
    <string name="especifico">Objetivos Específicos</string>0
    <string name="just">Justificación</string>
    <string name="telefono">+1 52 235 32 3 15 45 Ext 145</string>
    <string name="correo">info@itsmisantla.edu.mx</string>
    <string name="pagina">http://www.itsmisantla.edu.mx</string>
    <string name="ubicacion">Km. 1.8 Carretera a loma de cojolite Misantla, Veracruz, México</string>
    <string name="horario">Horario: \n 9:00 AM a 6:00 PM \n Lunes a Sabado</string>
    <string name="admision">CROQUIS DEL ITSM</string>
    <string name="google_maps_key">AIzaSyAX3YaOZ4KNNpKbyFONKivX2KK_1o-tBkU</string>
    <string name="fichas">INFORMACIÓN DE FICHAS</string>



</resources>
