<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/wallpaper"
    android:layout_height="match_parent"
    tools:context=".Activities.Gestion">

    <Button
        android:id="@+id/gestionback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Atras"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="191dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/gestion" />

            <TextView
                android:baselineAligned="true"
                android:background="@color/gris"
                android:text="@string/ige"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <TextView
                android:baselineAligned="true"
                android:background="@color/gris"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="@string/obj"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:baselineAligned="true"
                android:id="@+id/objIge"
                android:background="@color/gris"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="@string/cargando"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:baselineAligned="true"
                android:background="@color/gris"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="@string/camp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:baselineAligned="true"
                android:id="@+id/campIge"
                android:background="@color/gris"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="@string/cargando"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />


            <TextView
                android:baselineAligned="true"
                android:background="@color/gris"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="@string/perfIngre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:baselineAligned="true"
                android:id="@+id/perIge"
                android:background="@color/gris"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="@string/cargando"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:baselineAligned="true"
                android:background="@color/gris"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="@string/plan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:baselineAligned="true"
                android:id="@+id/planIge"
                android:background="@color/gris"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="@string/cargando"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:baselineAligned="true"
                android:background="@color/gris"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="@string/ventajas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:baselineAligned="true"
                android:id="@+id/venIge"
                android:background="@color/gris"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="@string/cargando"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

        </LinearLayout>
    </ScrollView>



</LinearLayout>
